# MpaUtils

./: .gitignore  MpaUtils.cmake  README.md
cmake/: config.cmake  utils.cmake
cmake/modules/: FindONNXRuntime.cmake
include/MpaUtils/: Dispatcher.hpp  Encoding.h  File.hpp  GpuOption.h  ImageIo.h  JsonExt.hpp  LibraryHolder.h  Logger.h  LoggerUtils.h  NoWarningCV.hpp  NoWarningCVMat.hpp  NonCopyable.hpp  Platform.h  Runtime.h  ScopeLeave.hpp  SingletonHolder.hpp  StringMisc.hpp  Time.hpp  Uuid.h
include/MpaUtils/Buffer/: BufferTypes.hpp  ImageBuffer.hpp  ListBuffer.hpp  StringBuffer.hpp
include/MpaUtils/Core/: ActionHandler.h  JsonValue.h  RuntimeValue.h
include/MpaUtils/Data/: DataBase64.h  DataCollections.h  DataCrypto.h  DataCsv.h  DataDateTime.h  DataJson.h  DataRandom.h  DataString.h  DataTable.h
source/: CMakeLists.txt
source/Core/: JsonValue.cpp
source/Data/: DataBase64.cpp  DataCollections.cpp  DataCrypto.cpp  DataCsv.cpp  DataDateTime.cpp  DataJson.cpp  DataRandom.cpp  DataString.cpp  DataTable.cpp
source/Encoding/: Encoding.cpp
source/GpuOption/: GpuOptionMacOS.cpp  GpuOptionWin32.cpp  GpuOption_NotImpl.cpp
source/IOStream/: ChildPipeIOStream.cpp  IOStream.cpp  SockIOStream.cpp
source/Logger/: Logger.cpp
source/Os/: ClipboardUtils.cpp
source/Platform/: PlatformLinux.cpp  PlatformMacOS.cpp  PlatformPosix.cpp  PlatformWin32.cpp
source/Process/: ChildProcess.cpp
source/Runtime/: Runtime_Posix.cpp  Runtime_Win.cpp
source/Uuid/: Uuid.cpp
tools/: mpadeps-download.py  mpadeps-extract.py  mpadeps_download.py
(+7 files in other folders)
